--- a/HEADPHONES.html
+++ b/HEADPHONES.html
@@ -18,6 +18,7 @@
 
             <nav class="header-nav">
                 <ul class="header-item">
+                    <li class="menu"><img src="/sourse/menu.svg" alt=""></li>
                     <li>
                         <a class="herader-list" href="#"><img src="/sourse/audiophile.svg" alt="logo"></a>
                     </li>
@@ -61,7 +62,7 @@
             </div>
         </section>
         <section class="container">
-            <div class="hero">
+            <div class="hero hero2">
                 <div class="heroHeadphones heroHeadphones2">
                     <h1 class="hero-title2 ">XX99 Mark I Headphones
                     </h1>
@@ -106,8 +107,8 @@
             </div>
         </section>
         <section>
-            <div class="container center3">
-                <div>
+            <div class="container center4">
+                <div class="center4-group">
                     <h1 class="center3-h1">Bringing you the <span>best</span> audio gear</h1>
                     <p class="center3-p">Located at the heart of New York City, Audiophile is the premier store for high end headphones, earphones, speakers, and audio accessories. We have a large showroom and luxury demonstration rooms available for you to browse and experience
                         a wide range of our products. Stop by our store to meet some of the fantastic people who make Audiophile the best place to buy your portable audio equipment.</p>
@@ -127,7 +128,7 @@
                 <div>
                     <ul class="footer-items">
                         <li>
-                            <a class="footer-link" href="index.html">HOME</a>
+                            <a class="footer-link footer-one" href="index.html">HOME</a>
                         </li>
                         <li>
                             <a class="footer-link" href="HEADPHONES.html">HEADPHONES</a>
