--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
             <nav class="header-nav">
                 <ul class="header-item">
+                    <li class="menu"><img src="/sourse/menu.svg" alt=""></li>
                     <li>
                         <a class="herader-list" href="#"><img src="/sourse/audiophile.svg" alt="logo"></a>
                     </li>
@@ -48,7 +49,7 @@
     <main>
         <section class="container">
             <div class="hero">
-                <div>
+                <div class="hero-group">
                     <h3 class="hero-title ">NEW PRODUCT</h3>
                     <h1 class="hero-title2 ">XX99 Mark II Headphones
                     </h1>
@@ -84,14 +85,14 @@
             <div class="container center">
                 <div><img class="center-img" src="/sourse/homepage/ZX9 SPEAKER.png" alt="ZX9
                     SPEAKER png"></div>
-                <div>
+                <div class="center1">
                     <h1 class="center-title ">ZX9 SPEAKER
                     </h1>
                     <p class="center-text ">Upgrade to premium speakers that are phenomenally built to deliver truly remarkable sound.</p>
                     <a class="center-link " href="PRODUCT.html">See Product</a>
                 </div>
             </div>
-            <div class="container center center2">
+            <div class="container  center2">
                 <div><img class="center-img center-img2" src="/sourse/homepage/ZX7SPEAKER.png" alt="ZX9
                     SPEAKER png"></div>
                 <div class="center-group">
@@ -111,9 +112,9 @@
                 </div>
             </div>
         </section>
-        <section style="padding-top: 150px;">
-            <div class="container center3">
-                <div>
+        <section>
+            <div class="container center4">
+                <div class="center4-group">
                     <h1 class="center3-h1">Bringing you the <span>best</span> audio gear</h1>
                     <p class="center3-p">Located at the heart of New York City, Audiophile is the premier store for high end headphones, earphones, speakers, and audio accessories. We have a large showroom and luxury demonstration rooms available for you to browse and experience
                         a wide range of our products. Stop by our store to meet some of the fantastic people who make Audiophile the best place to buy your portable audio equipment.</p>
@@ -133,7 +134,7 @@
                 <div>
                     <ul class="footer-items">
                         <li>
-                            <a class="footer-link" href="index.html">HOME</a>
+                            <a class="footer-link footer-one" href="index.html">HOME</a>
                         </li>
                         <li>
                             <a class="footer-link" href="HEADPHONES.html">HEADPHONES</a>
@@ -150,7 +151,7 @@
                             <a class="footer-link" href="https://ru-ru.facebook.com"><img src="/sourse/facebook.svg" alt=""></a>
                         </li>
                         <li>
-                            <a class="footer-link" href="https://twitter.com/?lang=ru"><img src="/sourse/twitter.svg" alt=""></a>
+                            <a class="footer-link" href="https://twitter.com/?lang=ru"><img src="/sourse/Path (2).svg" alt=""></a>
                         </li>
                         <li>
                             <a class="footer-link" href="https://www.instagram.com/"><img src="/sourse/instagram.svg" alt=""></a>
