--- a/PRODUCT.html
+++ b/PRODUCT.html
@@ -17,9 +17,10 @@
         <div class="container">
 
             <nav class="header-nav">
+                <li class="menu"><img src="/sourse/menu.svg" alt=""></li>
                 <ul class="header-item">
                     <li>
-                        <a class="herader-list" href="#"><img src="/sourse/audiophile.svg" alt="logo"></a>
+                        <a class="herader-list header-list" href="#"><img src="/sourse/audiophile.svg" alt="logo"></a>
                     </li>
                 </ul>
                 <ul class="header-item group">
